; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/graphics/extr_matrix3.c_matrix3_inv.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/graphics/extr_matrix3.c_matrix3_inv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.matrix3 = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { float }
%struct.matrix4 = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @matrix3_inv(%struct.matrix3* %0, %struct.matrix3* %1) #0 {
  %3 = alloca %struct.matrix3*, align 8
  %4 = alloca %struct.matrix3*, align 8
  %5 = alloca %struct.matrix4, align 4
  store %struct.matrix3* %0, %struct.matrix3** %3, align 8
  store %struct.matrix3* %1, %struct.matrix3** %4, align 8
  %6 = load %struct.matrix3*, %struct.matrix3** %4, align 8
  %7 = call i32 @matrix4_from_matrix3(%struct.matrix4* %5, %struct.matrix3* %6)
  %8 = load %struct.matrix3*, %struct.matrix3** %3, align 8
  %9 = bitcast %struct.matrix3* %8 to %struct.matrix4*
  %10 = call i32 @matrix4_inv(%struct.matrix4* %9, %struct.matrix4* %5)
  %11 = load %struct.matrix3*, %struct.matrix3** %3, align 8
  %12 = getelementptr inbounds %struct.matrix3, %struct.matrix3* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  store float 0.000000e+00, float* %13, align 4
  ret void
}

declare dso_local i32 @matrix4_from_matrix3(%struct.matrix4*, %struct.matrix3*) #1

declare dso_local i32 @matrix4_inv(%struct.matrix4*, %struct.matrix4*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
